Fixed menu close icon appearing too small

--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -102,8 +102,8 @@
     box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
 
     svg {
-      width: 35px;
-      height: 35px;
+      width: 25%;
+      height: 25%;
       color: var(--secondary-color);
       margin: 0.5rem 1rem;
     }
